--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!doctype html>
 <html ng-app="FotoSpill">
 <head>
-
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<meta charset="utf-8" />
 	<title>FotoSpill</title>
 	<link rel="stylesheet" href="style.css" />
 	<script src="angular.min.js"></script>
 	<script src="FotoSpill.js"></script>
+	<script src="relative-date.js"></script>
     <script type="text/javascript" src="//www.gstatic.com/cast/sdk/libs/receiver/2.0.0/cast_receiver.js"></script>
   
 </head>
@@ -17,48 +18,67 @@
 <body ng-controller="slideshow" ng-class="loadingClass">
 
 
-    <h1>
-    <label id="message">To be featured on this screen</label>
 
-    <img src="instagram-logo.png" /> 
-    #<input id="tag" type="text" ng-model="tag" ng-change="tagChange()" ng-init="tag = 'apples'" size="{{ tag.length }}" />
-    </h1>
+
+    <div id="rightside">
+	    <img id="instagram-newlogo" class="center" src="instagram-newlogo.png" /> 
+
+	   	<h2>
+	    	<label id="checkin" class="center">Check in to</label>
+		</h2>
+
+		<div id="locationContainer" class="center">
+		    <img id="locationlogo" src="location-logo.png" /> 
+			<label id="location-name">The 13th Step</label>
+		</div>
+
+		<img id="thirteenstep" class="center" src="13steplogo.png" /> 
+		
+		<label id="public-profile" class="center">Make sure your profile is public!</label>
+
+		<img id="fotospilllogo" src="fotospill-logo.png" /> 
+	</div>
+
+
+
+
+    <label id="message"></label> <!-- necessary for quit -->
+
+<!--     <input id="tag" type="text" ng-model="tag" ng-change="tagChange()" ng-init="tag = 'apples'" size="{{ tag.length }}" /> -->
+
+
 
 
 
 	<ul id="slides">
 		<li ng-repeat="image in images" class="slide" ng-class="{ active : image.isActive }">
-			<figure>
-				<img ng-src="{{ image.images.standard_resolution.url }}" class="image" />
-			</figure>
+			<div id="images">
+				<figure>
+					<img ng-src="{{ image.images.standard_resolution.url }}" class="image" />
+				</figure>
 
-			<div class="meta">
-				<p class="caption">
-					<cite class="author">
-						<img ng-src="{{ image.user.profile_picture }}" width="40" height="40" /> 
-						{{ image.user.username }}
-					</cite> 
-					{{ image.caption.text }}
-
-				</p>
-				<p class="likes">
-					&hearts; {{ image.likes.count }} likes
-				</p>
-				<p>
-					Posted at
-					<mydate>{{image.created_time * 1000 | date:'hh:mm a'}}</mydate>
-				</p>
-				<!-- <ul class="comments">
-					<li class="comment" ng-repeat="comment in image.comments.data">
+				<div class="meta">
+					<p class="caption">
 						<cite class="author">
-							<img ng-src="{{ comment.from.profile_picture }}" width="40" height="40" /> 
-							{{ comment.from.username }}
+							<img ng-src="{{ image.user.profile_picture }}" width="40" height="40" /> 
+							{{ image.user.username }}
 						</cite> 
-						{{ comment.text }}
-					</li>
-				</ul> -->
+
+					</p>
+					<p class="likes">
+						&hearts; {{ image.likes.count }} likes
+					</p>
+					<p>
+						Posted at
+
+						<mydate>{{image.created_time * 1000 | date:'hh:mm a - MM/dd'}}</mydate>
+					</p>
+				</div>
+				
 			</div>
 		</li>
 	</ul>
+
+
 </body>
 </html>
